fix: dark mode

--- a/snippets/css/variable.css
+++ b/snippets/css/variable.css
@@ -111,7 +111,7 @@ html :is(body.obsidian-app, body.obsidian-app .print) {
       calc(var(--accent-s) - 20%),
       calc(var(--accent-l) + 10%));
   --text-normal: hsla(var(--accent-h), 50%, 94%, 75%);
-  --text-on-accent: #eaeaea;
+  --text-on-accent: #eaeaea !important;
   --md-container-bg: hsl(calc(var(--accent-h) - 4), 18%, 9%);
   --color-opacity: 0.85;
   --color-red: rgb(255, 70, 70, var(--color-opacity)) !important;
