--- a/snippets/editor/code.scss
+++ b/snippets/editor/code.scss
@@ -381,22 +381,32 @@ body .markdown-rendered pre {
 }
 
 @supports selector(:has(pre)) {
-  .code-preview-bg .markdown-preview-view .markdown-preview-section {
-    div:has(>pre:not([class*="frontmatter"])) {
-      padding: var(--size-4-4) var(--size-4-8);
-      margin-block: var(--size-4-4);
-      border-radius: var(--radius-l);
-      background-image: var(--setting-code-bg, linear-gradient(-30deg,
-            hsl(calc(var(--accent-h) + 145), 50%, 85%),
-            hsl(calc(var(--accent-h) + 115), 50%, 85%),
-            hsl(calc(var(--accent-h) + 90), 50%, 85%),
-            hsl(calc(var(--accent-h) + 65), 50%, 85%),
-            hsl(calc(var(--accent-h) + 35), 50%, 85%)));
-    }
+  .code-preview-bg {
+    --code-bg-s: 50%;
+    --code-bg-l: 85%;
 
-    pre:not([class*="frontmatter"]) {
-      --code-background: hsl(var(--background-secondary-hsl));
-      border-width: 0;
+    .markdown-preview-view .markdown-preview-section {
+      div:has(>pre:not([class*="frontmatter"])) {
+        padding: var(--size-4-4) var(--size-4-8);
+        margin-block: var(--size-4-4);
+        border-radius: var(--radius-l);
+        background-image: var(--setting-code-bg, linear-gradient(-30deg,
+              hsl(calc(var(--accent-h) + 145), var(--code-bg-s), var(--code-bg-l)),
+              hsl(calc(var(--accent-h) + 115), var(--code-bg-s), var(--code-bg-l)),
+              hsl(calc(var(--accent-h) + 90), var(--code-bg-s), var(--code-bg-l)),
+              hsl(calc(var(--accent-h) + 65), var(--code-bg-s), var(--code-bg-l)),
+              hsl(calc(var(--accent-h) + 35), var(--code-bg-s), var(--code-bg-l))));
+      }
+
+      pre:not([class*="frontmatter"]) {
+        --code-background: hsl(var(--background-secondary-hsl));
+        border-width: 0;
+      }
     }
+  }
+
+  .theme-dark .markdown-preview-view .markdown-preview-section div:has(>pre:not([class*="frontmatter"])) {
+    --code-bg-s: 20%;
+    --code-bg-l: 45%;
   }
 }
